# soundscapes

./: .env.dist  .gitignore  Makefile  README.md  pyproject.toml
http-tests/: requests.http
soundscapes/: audio.py  exceptions.py  librosa_test.py  soundscapes.py
soundscapes/lib/: pygame_wrapper.py  sound.py
