[tool.poetry]
name = "soundscapes"
version = "0.1.0"
description = ""
authors = ["Stanislas Bruhière <stanislas@bruhiere.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
librosa = "^0.10.1"
just-playback = "^0.1.7"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
